--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tailwind-nextjs-starter-blog",
-  "version": "1.2.1",
+  "version": "1.4.2",
   "private": true,
   "scripts": {
     "start": "cross-env SOCKET=true node ./scripts/next-remote-watch.js ./data",
@@ -13,41 +13,41 @@
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.58",
-    "@tailwindcss/forms": "^0.3.2",
-    "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.2.5",
-    "esbuild": "^0.12.15",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.0",
+    "esbuild": "^0.13.13",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
-    "mdx-bundler": "^6.0.1",
-    "next": "12.0.3",
+    "mdx-bundler": "^8.0.0",
+    "next": "12.0.7",
     "next-themes": "^0.0.14",
-    "postcss": "^8.3.5",
-    "preact": "^10.5.13",
+    "postcss": "^8.4.5",
+    "preact": "^10.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "1.3.0",
-    "rehype-autolink-headings": "^6.0.0",
-    "rehype-citation": "^0.1.1",
-    "rehype-katex": "^6.0.0",
+    "rehype-autolink-headings": "^6.1.0",
+    "rehype-citation": "^0.1.2",
+    "rehype-katex": "^6.0.2",
     "rehype-prism-plus": "^1.1.3",
     "rehype-slug": "^5.0.0",
-    "remark-footnotes": "^4.0.0",
-    "remark-gfm": "^2.0.0",
-    "remark-math": "^5.0.0",
+    "remark-footnotes": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "sharp": "^0.28.3",
     "smoothscroll-polyfill": "^0.4.4",
-    "tailwindcss": "^2.2.2",
+    "tailwindcss": "^3.0.2",
     "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "12.0.3",
-    "@svgr/webpack": "^5.5.0",
+    "@next/bundle-analyzer": "12.0.7",
+    "@svgr/webpack": "^6.1.2",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
     "eslint": "^7.29.0",
-    "eslint-config-next": "12.0.3",
+    "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
@@ -57,9 +57,9 @@
     "inquirer": "^8.1.1",
     "lint-staged": "^11.0.0",
     "next-remote-watch": "^1.0.0",
+    "prettier": "2.2.1",
     "socket.io": "^4.1.3",
-    "socket.io-client": "^4.1.3",
-    "prettier": "2.2.1"
+    "socket.io-client": "^4.1.3"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
